--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ body{
 }
 
 img{
-    max-width:90%;
-    max-height:90vh;
+    max-width:100%;
+    max-height:100%;
     object-fit:contain;
 }
 </style>
