--- a/index.html
+++ b/index.html
@@ -9,12 +9,9 @@
 body{
     margin:0;
     padding:0;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    height:100vh;
-    background:#ffffff;
-}
+    width:100%;
+    height:100%;
+    overflow:hidden; 
 
 img{
     max-width:110%;
