--- a/index.html
+++ b/index.html
@@ -3,24 +3,27 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>صورة التحدي</title>
-
+<title>صورة التحدي ثابتة</title>
 <style>
-body{
+html, body{
     margin:0;
     padding:0;
     width:100%;
     height:100%;
-    overflow:hidden; 
+    overflow:hidden; /* يمنع التمرير */
+    /* خلفية أسود */
+}
 
 img{
-    max-width:110%;
-    max-height:110%;
-    object-fit:contain;
+    position:fixed; /* الصورة ثابتة */
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    object-fit:cover; /* تغطي كل الشاشة */
 }
 </style>
 </head>
-
 <body>
 
 <img src="bj.jpg" alt="challenge">
