--- a/index.html
+++ b/index.html
@@ -14,6 +14,27 @@ html, body{
     /* خلفية أسود */
 }
 
+   /* النصوص على الجنبين */
+.side-text{
+    position:fixed;
+    top:50%; /* في المنتصف عمودي */
+    transform:translateY(-50%);
+    font-size:50px;
+    font-weight:bold;
+    color:white;
+    text-shadow: 2px 2px 10px rgba(0,0,0,0.7); /* يخلي النص واضح فوق الصورة */
+}
+
+/* النص على اليسار */
+.left-text{
+    left:20px;
+}
+
+/* النص على اليمين */
+.right-text{
+    right:20px;
+}
+ 
 img{
     position:fixed; /* الصورة ثابتة */
     top:0;
@@ -27,6 +48,9 @@ img{
 <body>
 
 <img src="bj.jpg" alt="challenge">
+
+<div class="side-text left-text">رجال</div>
+<div class="side-text right-text">نساء</div>
 
 </body>
 </html>
