--- a/index.html
+++ b/index.html
@@ -15,25 +15,28 @@ html, body{
 }
 
    /* النصوص على الجنبين */
+
 .side-text{
-    position:fixed;
-    top:50%; /* في المنتصف عمودي */
+    position:absolute;
+    top:50%; /* في منتصف الصورة عمودي */
     transform:translateY(-50%);
     font-size:50px;
     font-weight:bold;
     color:white;
-    text-shadow: 2px 2px 10px rgba(0,0,0,0.7); /* يخلي النص واضح فوق الصورة */
+    text-shadow: 2px 2px 10px rgba(0,0,0,0.7);
+    pointer-events:none; /* النص مش يتأثر بالضغط */
 }
 
-/* النص على اليسار */
+/* نص على الشمال */
 .left-text{
     left:20px;
 }
 
-/* النص على اليمين */
+/* نص على اليمين */
 .right-text{
     right:20px;
 }
+
  
 img{
     position:fixed; /* الصورة ثابتة */
