--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@ html, body{
 
 .side-text{
     position:absolute;
-    top:50%; /* في منتصف الصورة عمودي */
+    top:50%;
     transform:translateY(-50%);
     font-size:50px;
     font-weight:bold;
     color:white;
     text-shadow: 2px 2px 10px rgba(0,0,0,0.7);
-    pointer-events:none; /* النص مش يتأثر بالضغط */
+    pointer-events:none;
+    white-space: nowrap; /* يمنع الكلمة من الانكسار ويخليها بالعرض */
 }
 
 /* نص على الشمال */
@@ -36,6 +37,7 @@ html, body{
 .right-text{
     right:20px;
 }
+
 
  
 img{
