--- a/index.html
+++ b/index.html
@@ -19,23 +19,27 @@ html, body{
 .side-text{
     position:absolute;
     top:50%;
-    transform:translateY(-50%);
     font-size:50px;
     font-weight:bold;
     color:white;
     text-shadow: 2px 2px 10px rgba(0,0,0,0.7);
     pointer-events:none;
-    white-space: nowrap; /* يمنع الكلمة من الانكسار ويخليها بالعرض */
+    white-space: nowrap;
+    transform: translateY(-50%) rotate(0deg); /* هنا تتحكم في الدوران */
 }
 
 /* نص على الشمال */
 .left-text{
     left:20px;
+    /* زاوية الدوران للشمال */
+    transform: translateY(-50%) rotate(-15deg); /* مثال: 15° دوران */
 }
 
 /* نص على اليمين */
 .right-text{
     right:20px;
+    /* زاوية الدوران لليمين */
+    transform: translateY(-50%) rotate(25deg); /* مثال: 15° دوران */
 }
 
 
