--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ html, body{
     text-shadow: 2px 2px 10px rgba(0,0,0,0.7);
     pointer-events:none;
     white-space: nowrap;
-    transform: translateY(-50%) rotate(0deg); /* هنا تتحكم في الدوران */
+    transform: translateY(-50%) rotate(40deg); /* هنا تتحكم في الدوران */
 }
 
 /* نص على الشمال */
@@ -39,7 +39,7 @@ html, body{
 .right-text{
     right:20px;
     /* زاوية الدوران لليمين */
-    transform: translateY(-50%) rotate(25deg); /* مثال: 15° دوران */
+    transform: translateY(-50%) rotate(_15deg); /* مثال: 15° دوران */
 }
 
 
