--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- استدعاء خط Tajawal من Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@700&display=swap" rel="stylesheet">
 <title>صورة التحدي ثابتة</title>
 <style>
 html, body{
@@ -11,7 +13,8 @@ html, body{
     width:100%;
     height:100%;
     overflow:hidden; /* يمنع التمرير */
-    /* خلفية أسود */
+  font-family: 'Tajawal', Arial, sans-serif; /* الخط Tajawal */
+  /* خلفية أسود */
 }
 
    /* النصوص على الجنبين */
@@ -21,7 +24,7 @@ html, body{
     top:50%;
     font-size:50px;
     font-weight:bold;
-    color:white;
+    color:black;
     text-shadow: 2px 2px 10px rgba(0,0,0,0.7);
     pointer-events:none;
     white-space: nowrap;
@@ -32,14 +35,14 @@ html, body{
 .left-text{
     left:20px;
     /* زاوية الدوران للشمال */
-    transform: translateY(-50%) rotate(-30deg); /* مثال: 15° دوران */
+    transform: translateY(-50%) rotate(90deg); /* مثال: 15° دوران */
 }
 
 /* نص على اليمين */
 .right-text{
     right:20px;
     /* زاوية الدوران لليمين */
-    transform: translateY(-50%) rotate(70deg); /* مثال: 15° دوران */
+    transform: translateY(-50%) rotate(90deg); /* مثال: 15° دوران */
 }
 
 
