Adjust positioning of left and right text elements

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ html, body{
 /* نص على الشمال */
 .left-text{
     left:20px;
+    top:50%; 
     /* زاوية الدوران للشمال */
     transform: translateY(-50%) rotate(90deg); /* مثال: 15° دوران */
 }
@@ -41,6 +42,7 @@ html, body{
 /* نص على اليمين */
 .right-text{
     right:20px;
+    top:50%; 
     /* زاوية الدوران لليمين */
     transform: translateY(-50%) rotate(90deg); /* مثال: 15° دوران */
 }
