Adjust left and right text positioning in CSS

--- a/index.html
+++ b/index.html
@@ -33,15 +33,16 @@ html, body{
 
 /* نص على الشمال */
 .left-text{
-    left:20px;
-    top:50%; 
+    left:50px;   /* المسافة من اليسار */
+    top:50%;     /* الارتفاع من أعلى الصفحة */
+   
     /* زاوية الدوران للشمال */
     transform: translateY(-50%) rotate(90deg); /* مثال: 15° دوران */
 }
 
 /* نص على اليمين */
 .right-text{
-    right:20px;
+    right:50px;
     top:50%; 
     /* زاوية الدوران لليمين */
     transform: translateY(-50%) rotate(90deg); /* مثال: 15° دوران */
