Change left-text position from left to right

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ html, body{
 
 /* نص على الشمال */
 .left-text{
-    left:150px;   /* المسافة من اليسار */
+    right:20px;   /* المسافة من اليسار */
     top:80%;     /* الارتفاع من أعلى الصفحة */
    
     /* زاوية الدوران للشمال */
