--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ html, body{
 
 /* نص على الشمال */
 .left-text{
-    right:-50px;   /* المسافة من اليسار */
-    top:80%;     /* الارتفاع من أعلى الصفحة */
+    right:20px;   /* المسافة من اليسار */
+    top:120px;     /* الارتفاع من أعلى الصفحة */
    
     /* زاوية الدوران للشمال */
     transform: translateY(-50%) rotate(90deg); /* مثال: 15° دوران */
