--- a/index.html
+++ b/index.html
@@ -30,6 +30,48 @@ html, body{
     white-space: nowrap;
     transform: translateY(-50%) rotate(50deg); /* هنا تتحكم في الدوران */
 }
+.button {
+    display:inline-block;
+    padding:15px 25px;
+    margin:5px;
+    font-size:20px;
+    font-weight:bold;
+    border:none;
+    border-radius:8px;
+    cursor:pointer;
+    text-align:center;
+}
+
+/* أزرار صفراء */
+.yellow {
+    background:#FFD700; /* أصفر */
+    color:black;
+}
+
+/* أزرار حمراء */
+.red {
+    background:#FF4D4D; /* أحمر */
+    color:white;
+}
+
+/* موقع الأزرار */
+.left-buttons{
+    position:absolute;
+    left:20px;
+    top:50%;
+    transform: translateY(-50%);
+    display:flex;
+    flex-direction: column;
+}
+
+.right-buttons{
+    position:absolute;
+    right:20px;
+    top:50%;
+    transform: translateY(-50%);
+    display:flex;
+    flex-direction: column;
+}
 
 /* نص على الشمال */
 .left-text{
@@ -66,6 +108,22 @@ img{
 
 <div class="side-text left-text">رجال</div>
 <div class="side-text right-text">نساء</div>
+
+    <!-- أزرار الشمال -->
+    <div class="left-buttons">
+        <button class="button yellow">+1</button>
+        <button class="button yellow">+5</button>
+        <button class="button red">+1</button>
+        <button class="button red">+5</button>
+    </div>
+
+    <!-- أزرار اليمين -->
+    <div class="right-buttons">
+        <button class="button yellow">+1</button>
+        <button class="button yellow">+5</button>
+        <button class="button red">+1</button>
+        <button class="button red">+5</button>
+    </div>
 
 </body>
 </html>
