Adjust button positions in index.html

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ html, body{
 /* موقع الأزرار */
 .left-buttons{
     position:absolute;
-    right:10px;
-    top:10%; 
+    right:20px;
+    top:20px; 
     /* زاوية الدوران لليمين */
     transform: translateY(-50%) rotate(90deg); /* مثال: 15° دوران */
     display:flex;
@@ -66,8 +66,8 @@ html, body{
 }
 .right-buttons{
     position:absolute;
-    right:-105px;
-    top:10%; 
+    right:20px;
+    top:105; 
     /* زاوية الدوران لليمين */
     transform: translateY(-50%) rotate(90deg); /* مثال: 15° دوران */
     display:flex;
