Adjust button rotation with vertical translation

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@ html, body{
 
 /* مثال: دوران كل زر داخل الشمال */
 .left-buttons .button {
-    transform: rotate(90deg); /* غيّر الرقم حسب الزاوية اللي تحب */
+    transform: translateY(-50%) rotate(90deg); /* مثال: 15° دوران */
+/* غيّر الرقم حسب الزاوية اللي تحب */
 }
 
 /* الأزرار على اليمين */
@@ -81,7 +82,8 @@ html, body{
 
 /* مثال: دوران كل زر داخل اليمين */
 .right-buttons .button {
-    transform: rotate(90deg); /* غيّر الرقم حسب الزاوية */
+    transform: translateY(-50%) rotate(90deg); /* مثال: 15° دوران */
+} /* غيّر الرقم حسب الزاوية */
 
 
 
