Adjust right-buttons position in index.html

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@ html, body{
 /* الأزرار على اليمين */
 .right-buttons{
     position:absolute;
-    right:5px; /* نفس مكان النص */
-    top:calc(10% + 60px);
+    left:5px; /* نفس مكان النص */
+    top:calc(105px + 60px);
     display:flex;
     flex-direction: column;
 }
