--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ html, body{
 .right-buttons{
     position:absolute;
     left:5px; /* نفس مكان النص */
-    top:calc(30px + 60px);
+    top:calc(70% + 60px);
     display:flex;
     flex-direction: column;
 }
