Add gap property to button containers

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ html, body{
     top:calc(10% + 60px); /* تحت النص مباشرة */
     display:flex;
     flex-direction: column;
+gap:15px;
 }
 
 /* مثال: دوران كل زر داخل الشمال */
@@ -78,7 +79,9 @@ html, body{
     top:calc(70% + 60px);
     display:flex;
     flex-direction: column;
+gap:15px;
 }
+    
 
 /* مثال: دوران كل زر داخل اليمين */
 .right-buttons .button {
