--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@ gap:15px;
     top:calc(30% + 150px); /* تحت أزرار +1 و +5 مباشرة */
     left:50%;
     transform:translateX(-50%);
-    padding:15px 30px;
+    padding:1px 1px;
     font-size:20px;
     font-weight:bold;
     border:none;
     border-radius:8px;
-    background:#333; /* أسود */
-    color:white;     /* كتابة بيضاء */
+ /* أسود */
+    color:black;     /* كتابة بيضاء */
     cursor:pointer;
     z-index:10;      /* للتأكد أنه فوق الصورة */
 }
@@ -143,7 +143,7 @@ img{
 </style>
 </head>
 <body>
-<button class="reset-button" onclick="resetScores()">إعادة</button>
+<button class="reset-button" onclick="resetScores()">o</button>
 <img src="bj.jpg" alt="challenge">
 
 <!-- نص الرجال مع الرقم -->
