--- a/index.html
+++ b/index.html
@@ -121,11 +121,9 @@ gap:15px;
     top:calc(30% + 150px); /* تحت أزرار +1 و +5 مباشرة */
     left:50%;
     transform:translateX(-50%);
-    padding:1px 1px;
+    padding:0px 1px;
     font-size:20px;
     font-weight:bold;
-    border:none;
-    border-radius:8px;
  /* أسود */
     color:black;     /* كتابة بيضاء */
     cursor:pointer;
@@ -143,7 +141,7 @@ img{
 </style>
 </head>
 <body>
-<button class="reset-button" onclick="resetScores()">o</button>
+<button class="reset-button" onclick="resetScores()">.</button>
 <img src="bj.jpg" alt="challenge">
 
 <!-- نص الرجال مع الرقم -->
