--- a/index.html
+++ b/index.html
@@ -117,18 +117,20 @@ gap:15px;
 }
 
 .reset-button{
+    ..reset-button{
     position:absolute;
     top:calc(30% + 150px); /* تحت أزرار +1 و +5 مباشرة */
     left:50%;
     transform:translateX(-50%);
-    padding:0px 1px;
+    padding:0px 1px;       /* لا padding كبير */
     font-size:20px;
     font-weight:bold;
- /* أسود */
-    color:black;     /* كتابة بيضاء */
+    background:none;        /* بدون خلفية */
+    border:none;            /* بدون إطار */
+    color:black;            /* النص أسود */
     cursor:pointer;
-    z-index:10;      /* للتأكد أنه فوق الصورة */
-}
+    z-index:10;             /* فوق الصورة */
+   }
  
 img{
     position:fixed; /* الصورة ثابتة */
