--- a/index.html
+++ b/index.html
@@ -132,12 +132,13 @@ gap:15px;
    }
  
 img{
-    position:fixed; /* الصورة ثابتة */
+    position:fixed;
     top:0;
     left:0;
     width:100%;
     height:100%;
-    object-fit:cover; /* تغطي كل الشاشة */
+    object-fit:cover;
+    transition: transform 0.3s ease; /* حركة سلسة */
 }
 </style>
 </head>
@@ -151,21 +152,13 @@ img{
 </div>
 
 <!-- أزرار الشمال -->
-<div class="left-buttons">
-    <button class="button red" onclick="addScore('men',1)">+1</button>
-    <button class="button red" onclick="addScore('men',5)">+5</button>
-</div>
-
-<!-- نص النساء مع الرقم -->
-<div class="side-text right-text">
-  نساء <span class="counter" id="womenCounter">0</span>
-</div>
+<!-- أزرار الشمال -->
+<button class="button red" onclick="addScore('men',1); moveImage('right',1);">+1</button>
+<button class="button red" onclick="addScore('men',5); moveImage('right',5);">+5</button>
 
 <!-- أزرار اليمين -->
-<div class="right-buttons">
-    <button class="button yellow" onclick="addScore('women',1)">+1</button>
-    <button class="button yellow" onclick="addScore('women',5)">+5</button>
-</div>
+<button class="button yellow" onclick="addScore('women',1); moveImage('left',1);">+1</button>
+<button class="button yellow" onclick="addScore('women',5); moveImage('left',5);">+5</button>
 
 <script>
 let menScore = 0;
@@ -185,7 +178,17 @@ function addScore(team, value){
     womenScore = 0;
     document.getElementById('menCounter').innerText = menScore;
     document.getElementById('womenCounter').innerText = womenScore;
+  }
+    let imageOffset = 0; // قيمة التحريك بالـ px أو نسبة
+
+function moveImage(direction, value){
+    if(direction === 'left'){ // ضغط على زر من اليمين → الصورة تتحرك شمال
+        imageOffset -= value; 
+    } else if(direction === 'right'){ // زر من الشمال → الصورة تتحرك يمين
+        imageOffset += value;
     }
+    document.querySelector('img').style.transform = `translateX(${imageOffset}px)`;
+}
 </script>
 </body>
 </html>
