--- a/index.html
+++ b/index.html
@@ -150,7 +150,10 @@ img{
 <div class="side-text left-text">
   رجال <span class="counter" id="menCounter">0</span>
 </div>
-
+<!-- نص النساء مع الرقم -->
+<div class="side-text right-text">
+  نساء <span class="counter" id="womenCounter">0</span>
+</div>
 <!-- أزرار الشمال -->
 <!-- أزرار الشمال -->
 <<!-- أزرار الشمال -->
