--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@ gap:15px;
    }
  
 img{
-    position:fixed;
+    position:absolute; /* بدل fixed */
     top:0;
     left:0;
     width:100%;
     height:100%;
     object-fit:cover;
-    transition: transform 0.5s ease; /* حركة سلسة */
+    transition: transform 0.3s ease; /* حركة سلسة */
 }
 </style>
 </head>
