--- a/index.html
+++ b/index.html
@@ -118,18 +118,27 @@ gap:15px;
 
 .reset-button{
     position:absolute;
-    top:calc(29% + 150px); /* تحت أزرار +1 و +5 مباشرة */
+    top:calc(29% + 150px);
     left:50%;
     transform:translateX(-50%);
-    padding:0px 1px;       /* لا padding كبير */
+
+    padding:10px 30px;              /* حجم مناسب */
     font-size:20px;
     font-weight:bold;
-    background:none;        /* بدون خلفية */
-    border:none;            /* بدون إطار */
-    color:black;            /* النص أسود */
+
+    background:#1877f2;             /* أزرق احترافي */
+    color:white;                    /* النص أبيض */
+
+    border:none;
+    border-left:5px solid #0d5ed7;  /* حافة جانبية */
+    border-right:5px solid #0d5ed7; /* حافة جانبية */
+
+    border-radius:8px;              /* حواف ناعمة */
     cursor:pointer;
-    z-index:10;             /* فوق الصورة */
-   }
+    z-index:10;
+
+    transition:0.3s;
+}
  
 img{
     position:absolute; /* بدل fixed */
@@ -143,7 +152,7 @@ img{
 </style>
 </head>
 <body>
-<button class="reset-button" onclick="resetScores()">.</button>
+<button class="reset-button" onclick="resetScores()">رجوع</button>
 <img src="bj.jpg" alt="challenge">
 
 <!-- نص الرجال مع الرقم -->
