--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@ gap:15px;
 .reset-button{
     position:absolute;
     top:calc(29% + 150px);
-    left:50%;
-    transform:translateX(-50%);
+    left:10px;
+    transform: translateY(-50%) rotate(90deg);
 
     padding:10px 30px;              /* حجم مناسب */
-    font-size:20px;
+    font-size:5px;
     font-weight:bold;
 
     background:#1877f2;             /* أزرق احترافي */
