--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ html, body{
     font-size:50px;
     font-weight:bold;
     color:black;
-    text-shadow: 2px 2px 10px rgba(0,0,0,0.7);
+    text-shadow: none;
     pointer-events:none;
     white-space: nowrap;
     transform: translateY(-50%) rotate(50deg); /* هنا تتحكم في الدوران */
