--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@700&display=swap" rel="stylesheet">
 <link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#1877f2">
+<meta name="mobile-web-app-capable" content="yes">
 <title>صورة التحدي ثابتة</title>
 <style>
 html, body{
