--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ gap:15px;
 }
  
 img {
-    position:absolute;       /* مثبتة */
+    position:fixed;       /* مثبتة */
     top: -50px;
     left: 0;
     width: 100vw;          /* تغطي كامل عرض الشاشة */
