--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ html, body{
     padding:0;
     width:100%;
     height:100%;
-    top:10%;
+    top:50px;
     overflow:hidden; /* يمنع التمرير */
   font-family: 'Tajawal', Arial, sans-serif; /* الخط Tajawal */
   /* خلفية أسود */
