--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@ html, body{
     padding:0;
     width:100%;
     height:100%;
-    top:50px;
     overflow:hidden; /* يمنع التمرير */
   font-family: 'Tajawal', Arial, sans-serif; /* الخط Tajawal */
   /* خلفية أسود */
@@ -144,13 +143,14 @@ gap:15px;
 }
  
 img {
-    position:absolute;
-    top:50px;
-    left:0;
-    width:100%;
-    height:100vh; /* بدل 100% */
-    object-fit:cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     transition: transform 0.3s ease;
+    transform: translateY(-30px); /* هنا ترفع الصورة 30px */
 }
 </style>
 </head>
