--- a/index.html
+++ b/index.html
@@ -159,12 +159,12 @@ img {
 <img src="bj.jpg" alt="challenge">
 
 <!-- نص الرجال مع الرقم -->
-<div class="side-text left-text">
-  رجال <span class="counter" id="menCounter">0</span>
+<div class="side-text right-text">
+  اولاد <span class="counter" id="womenCounter">0</span>
 </div>
 <!-- نص النساء مع الرقم -->
 <div class="side-text right-text">
-  نساء <span class="counter" id="womenCounter">0</span>
+  بنات <span class="counter" id="womenCounter">0</span>
 </div>
 <!-- أزرار الشمال -->
 
